(lang dune 1.11)
(version 0.1)
(name remu_scope)
(generate_opam_files true)
(maintainers "Taine Zhao")
(homepage "https://github.com/RemuLang")
(authors "Taine Zhao <thaut@logic.cs.tsukuba.ac.jp>")
(bug_reports "https://github.com/RemuLang/remu-scope/issues")
(package
    (name remu_scope)
    (synopsis "A framework to do name analysis for programming languages.")
    (description "A framework to do name analysis for programming languages.")
    (depends
    (batteries (>= 2.0))))
